--- a/src/index.css
+++ b/src/index.css
@@ -8,58 +8,51 @@
   text-align: center;
 }
 
-.feed {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-
 .story {
   position: relative;
   padding: 1em;
   box-shadow: 0 1px 2px #aeaeae;
+  margin: 1em;
 }
 
 .story span.delete {
   position: absolute;
-  /* padding: 1px 3px; */
-  width: 1rem;
-  height: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2em;
+  height: 2em;
   text-align: center;
-  line-height: 0.8;
-  top: 0;
-  right: 0;
+  line-height: 1;
+  top: -0.5em;
+  right: -0.5em;
   background: red;
   color: #fff;
   cursor: pointer;
+  border-radius: 50%;
 }
 
-.story_header {
-  display: flex;
-  flex-direction: row;
-  gap: 1em;
-}
-
-.story_header h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 1.5em;
-}
-
-.story_header h1 > a {
+.story-heading {
+  font-size: x-large;
   text-decoration: none;
+  color: royalblue;
 }
 
-.story_creator {
+.story-heading:hover {
+  cursor: pointer;
+}
+
+.story-author {
   display: block;
   font-size: 1rem;
   margin-top: 1rem;
+  font-weight: bold;
 }
 
-.story_image {
+.story-image {
   max-width: 20%;
 }
 
-.story_image img {
+.story-image img {
   width: 100%;
 }
